<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapNotes</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_mapnote">Create MapNote</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_marker_edit">MarkerEditActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_title">Title</string>
    <string name="label_note">Note</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longtitude">Longtitude</string>
    <string name="label_create_map_note">Create MapNote</string>
    <string name="label_edit_map_note">Edit MapNote</string>
    <string name="label_cancel">Cancel</string>
    <string name="action_copy_db">Copy DB to SD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_map_view">Map View</string>
    <string name="tab_notes_list">Notes List</string><string name="label_infomore">More info...</string>

</resources>