<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.gylka.mapnotes.MapViewActivity" >

    <item android:id="@+id/action_create_mapnote"
        android:title="@string/action_create_mapnote"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:visible="false"
        android:enabled="false"/>
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:visible="false"
        android:enabled="false"/>
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:visible="false"
        android:enabled="false"/>
    <item android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:visible="false"
        android:enabled="false"/>

</menu>
